# decimax

./: CHANGELOG.md  Cargo.toml  README.md  criterion.toml
benches/: README.md  vs_rust_decimal.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: by_prim_fpdec.rs  self_proof.rs
src/: convert.rs  display.rs  floats.rs  from_str.rs  int128.rs  int32.rs  int64.rs  lib.rs  ops.rs
tests/: add.rs  div.rs  equal.rs  mul.rs  order.rs
