[package]
name = "lean-decimal"
version = "0.1.0"
edition = "2024"

[dependencies]
num-traits = {version="0.2", default-features=false}
div-pow10 = {path="../div-pow10"}

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
rust_decimal = { version = "1.40.0", features = ["macros"] }

[[bench]]
name = "vs_rust_decimal"
harness = false
