[package]
name = "lean-decimal"
version = "0.1.2"
edition = "2024"
authors = ["Wu Bingzheng <wubingzheng@gmail.com>"]
description = "Fast, fixed-precision, floating-point decimal types."
license = "MIT"
repository = "https://github.com/WuBingzheng/lean-decimal"
documentation = "https://docs.rs/lean-decimal"
keywords = ["decimal"]
categories = ["data-structures", "finance", "mathematics", "no-std", "no-std::no-alloc"]

[dependencies]
div-pow10 = "0.1"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
rust_decimal = { version = "1.40.0", features = ["macros"] }

[[bench]]
name = "vs_rust_decimal"
harness = false
